# bridgr-connect

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: demo.py
src/bridgr_connect/: __init__.py  __main__.py  client.py  events.py
