[project]
name = "bridgr-connect"
version = "0.1.0"
description = "Python SDK for Jobelix — automatically route agentic tasks to the best available agent on the market, with live SSE streaming."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Augustin Kheng" }]
keywords = ["agent", "llm", "orchestrator", "sse", "streaming", "openai", "jobelix", "bridgr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/Gusthavok/bridgr-connect"
Repository = "https://github.com/Gusthavok/bridgr-connect"
Issues = "https://github.com/Gusthavok/bridgr-connect/issues"

[project.scripts]
bridgr = "bridgr_connect.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
